chỉnh sửa lại layout của customer

--- a/views/customerViews/categoriesAndProducts.handlebars
+++ b/views/customerViews/categoriesAndProducts.handlebars
@@ -37,7 +37,7 @@
 
 
   <!-- Hiển thị sản phẩm -->
-  <h1 class="text-center mb-4">Tất cả sản phẩm</h1>
+  <h1 class="text-start mb-4">Tất cả sản phẩm</h1>
   <div class="row">
     {{#each products}}
     <div class="col-md-3 mb-4">
