Sửa href cho mỗi trang

--- a/views/customerViews/productDetail.handlebars
+++ b/views/customerViews/productDetail.handlebars
@@ -29,7 +29,7 @@
           <p><strong>Màn hình:</strong> {{product.screen_size}}</p>
           <p><strong>Năm phát hành:</strong> {{product.release_year}}</p>
           <div class="d-flex justify-content-between align-items-center">
-            <a href="/user/{{product.category_id}}/products" class="btn btn-secondary">Quay lại sản phẩm</a>
+            <a href="/{{role}}" class="btn btn-secondary">Quay lại sản phẩm</a>
             <button id="add-to-cart-btn" class="btn btn-primary">Thêm vào giỏ hàng</button>
           </div>
         </div>
