--- a/views/customerViews/searchResults.handlebars
+++ b/views/customerViews/searchResults.handlebars
@@ -21,6 +21,6 @@
   {{/if}}
 
   <div class="text-center mt-4">
-    <a href="/user" class="btn btn-secondary">Quay lại danh mục</a>
+    <a href="/{{role}}" class="btn btn-secondary">Quay lại danh mục</a>
   </div>
 </div>
