--- a/views/customerViews/categoriesAndProducts.handlebars
+++ b/views/customerViews/categoriesAndProducts.handlebars
@@ -5,7 +5,7 @@
 {{/if}}
 <div class="container my-5">
 
-  <!-- Thanh tìm kiếm -->
+  {{!-- <!-- Thanh tìm kiếm -->
   <div class="row mb-4">
     <div class="col-md-12">
       <form method="GET" action="/search" class="input-group">
@@ -18,7 +18,7 @@
         </button>
       </form>
     </div>
-  </div>
+  </div> --}}
 
 
   <!-- Hiển thị danh mục sản phẩm -->
