fix xong cái giỏ hàng

--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -249,6 +249,7 @@
       .catch((err) => {
         console.error('Lỗi:', err);
         alert('Đã xảy ra lỗi khi thêm sản phẩm vào giỏ hàng.');
+        //alert('Lỗi iiiiiiiiiiiiii');
       });
   }
 
