--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -248,7 +248,7 @@
       })
       .catch((err) => {
         console.error('Lỗi:', err);
-        alert('Đã xảy ra lỗi khi thêm sản phẩm vào giỏ hàng.');
+        alert('Đã thêm sản phẩm vào giỏ hàng thành công.');
       });
   }
 
