--- a/views/customerViews/productsByCategory.handlebars
+++ b/views/customerViews/productsByCategory.handlebars
@@ -7,19 +7,20 @@
         <!-- Đảm bảo hình vừa khung và giữ tỷ lệ -->
         <div class="card-img-top" style="height: 200px; background: #f8f9fa; display: flex; justify-content: center; align-items: center; overflow: hidden;">
           <img src="{{image}}" alt="{{product_name}}" style="width: 100%; height: auto;">
+          
         </div>
         <div class="card-body text-center">
           <h5 class="card-title">{{product_name}}</h5>
           <p class="card-text">Giá: {{price}} VND</p>
           
-            <a href="/product/{{product_id}}" class="btn btn-success">Xem chi tiết</a>
+            <a href="/product/{{product_id}}" class="btn btn-success" >Xem chi tiết</a>
             {{!-- <form action="/cart/add" method="POST">
               <input type="hidden" name="product_id" value="{{product_id}}">
               <input type="hidden" name="quantity" value="1">
               <button type="submit" class="btn btn-primary mt-2">Thêm vào giỏ hàng</button>
             </form>
            --}}
-            <button onclick="addToCart({{product_id}}, 1)" class="btn btn-primary">Thêm vào giỏ hàng</button>
+            <button onclick="addToCart({{product_id}}, 1)" class="btn btn-primary" style="margin-top:10px">Thêm vào giỏ hàng</button>
 
             
          
