--- a/views/customerViews/searchResults.handlebars
+++ b/views/customerViews/searchResults.handlebars
@@ -6,7 +6,9 @@
     {{#each products}}
     <div class="col-md-3 mb-4">
       <div class="card h-100 text-center">
-        <img src="{{image}}" class="card-img-top" alt="{{product_name}}" style="height: 200px; object-fit: cover;">
+        {{!-- <img src="{{image}}" class="card-img-top" alt="{{product_name}}" style="height: 200px; object-fit: cover;"> --}}
+        <img src="{{image}}" alt="{{product_name}}" style="width: 100%; height: auto;">
+
         <div class="card-body">
           <h5 class="card-title">{{product_name}}</h5>
           <p class="card-text">Giá: {{price}} VND</p>
