--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -229,7 +229,7 @@
             </div>
         </div>
         <div class="text-center p-3 bg-dark text-white">
-            © 2024 CellphoneS Clone
+            © 2024 Web Clone
         </div>
     </footer>
 
