--- a/views/customerViews/productDetail.handlebars
+++ b/views/customerViews/productDetail.handlebars
@@ -20,7 +20,7 @@
           <div class="d-flex justify-content-between align-items-center mb-3">
             <!-- Khung bo cho giá tiền -->
             <div class="border p-3 rounded shadow-sm">
-              <h3 class="text-danger"><strong>{{product.price}} VND</strong></h3>
+              <h3 class="text-danger"><strong>{{ formatCurrency product.price}}</strong></h3>
             </div>
             <span class="badge bg-success">{{product.category_name}}</span>
           </div>
