--- a/views/customerViews/productsByCategory.handlebars
+++ b/views/customerViews/productsByCategory.handlebars
@@ -11,7 +11,7 @@
         </div>
         <div class="card-body text-center">
           <h5 class="card-title">{{product_name}}</h5>
-          <p class="card-text">Giá: {{price}} VND</p>
+          <p class="card-text">Giá: {{ formatCurrency price}}</p>
           
             <a href="/product/{{product_id}}" class="btn btn-success" >Xem chi tiết</a>
             {{!-- <form action="/cart/add" method="POST">
