--- a/views/customerViews/searchResults.handlebars
+++ b/views/customerViews/searchResults.handlebars
@@ -11,7 +11,7 @@
 
         <div class="card-body">
           <h5 class="card-title">{{product_name}}</h5>
-          <p class="card-text">Giá: {{price}} VND</p>
+          <p class="card-text">Giá: {{formatCurrency price}}</p>
           <a href="/product/{{product_id}}" class="btn btn-success">Xem chi tiết</a>
         </div>
       </div>
