--- a/views/customerViews/productsByCategory.handlebars
+++ b/views/customerViews/productsByCategory.handlebars
@@ -5,7 +5,7 @@
     <div class="col-md-3 mb-4">
       <div class="card h-100">
         <!-- Đảm bảo hình vừa khung và giữ tỷ lệ -->
-        <div class="card-img-top" style="height: 200px; background: #f8f9fa; display: flex; justify-content: center; align-items: center; overflow: hidden;">
+        <div class="card-img-top" style="height: 250px; width: 250px; text-align: center; margin: 0 auto; display: block;">
           <img src="{{image}}" alt="{{product_name}}" style="width: 100%; height: auto;">
           
         </div>
